--- a/front/html/Inicio.html
+++ b/front/html/Inicio.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div id="mensajeBienvenida">
-        <h1 class="bienvenute">Bienvenidos al Cafe Bar</h1>
+        <h1 class="bienvenute">Bienvenidos al Café Bar</h1>
         <button id="btnIngresar">Ingresar</button>
     </div>
 
     <div class="login-container" id="loginContainer" style="display: none;">
-        <h3 class="Login">Inicio De Sesion</h3>
+        <h3 class="Login">Inicio De Sesión</h3>
         <form id="loginForm"> 
             <div class="input-group">
                 <label for="username">Usuario</label>
@@ -33,7 +33,7 @@
     </div>
 
 <footer>
-    <p>&copy; 2014 Cafe Bar, Todos los derechos reservados.</p>
+    <p>&copy; 2014 Café Bar, Todos los derechos reservados.</p>
 </footer>
     <script src="/front/js/sesion.js"></script>
 </body>
