--- a/front/html/Proveedores.HTML
+++ b/front/html/Proveedores.HTML
@@ -32,7 +32,7 @@
 <main class="container1">
     <h3 class="center-align1">Gestión de Proveedores</h3>
     <div class="contenedor2">
-        <a href="/front/html/Menu.html" class="button1" id="addButton">Atras</a>
+        <a href="/front/html/Menu.html" class="button1" id="addButton">Atrás</a>
         <a href="/front/html/Proveedores_Anadir.html" class="button1" id="addButto">Añadir Proveedor</a>
         <!-- <a href="Proveedores_Actualizar.html" class="button1" id="updateButto">Actualizar Proveedor</a>
         <a href="Proveedores_Eliminar.html" class="button1" id="deleteButto">Eliminar Proveedor</a> -->
@@ -58,7 +58,7 @@
 </main>
 
 <footer>
-  <p>&copy; 2014 Cafe Bar, Todos los derechos reservados.</p>
+  <p>&copy; 2014 Café Bar, Todos los derechos reservados.</p>
 </footer>
 
 <script src="/front/js/proveedores.js"></script>
