--- a/front/html/Proveedores_Eliminar.html
+++ b/front/html/Proveedores_Eliminar.html
@@ -50,11 +50,11 @@
         </table>
     </div>
     <div class="contenedor2">
-        <a href="/front/html/Proveedores.HTML" class="button1" id="addButton">Atras</a>
+        <a href="/front/html/Proveedores.HTML" class="button1" id="addButton">Atrás</a>
     </div>
 </main>
 <footer>
-    <p>&copy; 2014 Cafe Bar, Todos los derechos reservados.</p>
+    <p>&copy; 2014 Café Bar, Todos los derechos reservados.</p>
 </footer>
 <script src="/front/js/proveedores.js"></script>
 </body>
