--- a/front/html/Usuarios_Eliminar.html
+++ b/front/html/Usuarios_Eliminar.html
@@ -30,7 +30,7 @@
     </div>
 </header>
 <main>
-    <h3>Formulario de Eliminacion de Usuarios</h3>
+    <h3>Formulario de Eliminación de Usuarios</h3>
     <form id="eliminarUsuarioForm" onsubmit="procesarEliminacionUsuario(event)">
         <div class="form-container">
             <div class="form-group">
@@ -53,11 +53,11 @@
         <button type="submit">Eliminar</button>
     </form>
     <div class="contenedor2">
-        <a href="/front/html/Usuarios.html" class="button1" id="addButton">Atras</a>
+        <a href="/front/html/Usuarios.html" class="button1" id="addButton">Atrás</a>
     </div>
 </main>
 <footer>
-    <p>&copy; 2014 Cafe Bar, Todos los derechos reservados.</p>
+    <p>&copy; 2014 Café Bar, Todos los derechos reservados.</p>
 </footer>
 
 <script src="/front/js/usuariosEliminacion.js"></script>
