--- a/front/html/Menu.html
+++ b/front/html/Menu.html
@@ -41,7 +41,7 @@
 </header>
 
 <footer>
-    <p>&copy; 2014 Cafe Bar, Todos los derechos reservados.</p>
+    <p>&copy; 2014 Café Bar, Todos los derechos reservados.</p>
 </footer>
 <script src="/front/js/menu.js"></script>
 </body>
