--- a/front/html/Productos_Salida.html
+++ b/front/html/Productos_Salida.html
@@ -53,11 +53,11 @@
         <button type="submit">Confirmar</button>
     </form>
     <div class="contenedor2">
-        <a href="/front/html/Productos.HTML" class="button1" id="addButton">Atras</a>
+        <a href="/front/html/Productos.HTML" class="button1" id="addButton">Atrás</a>
     </div>
 </main>
 <footer>
-    <p>&copy; 2014 Cafe Bar, Todos los derechos reservados.</p>
+    <p>&copy; 2014 Café Bar, Todos los derechos reservados.</p>
 </footer>
 
 <script src="/front/js/productosVenta.js"></script>
