--- a/front/html/Proveedores_Anadir.html
+++ b/front/html/Proveedores_Anadir.html
@@ -69,7 +69,7 @@
     </div>
 </main>
 <footer>
-    <p>&copy; 2014 Cafe Bar, Todos los derechos reservados.</p>
+    <p>&copy; 2014 Café Bar, Todos los derechos reservados.</p>
 </footer>
 <script src="/front/js/proveedoresAnadir.js"></script>
 </body>
