--- a/front/html/Usuarios.html
+++ b/front/html/Usuarios.html
@@ -36,11 +36,11 @@
         <a href="/front/html/Usuarios_Eliminar.html" class="button1" id="deleteButton">Eliminar Usuario</a>
     </div>
     <div class="contenedor2">
-        <a href="/front/html/Menu.html" class="button1" id="addButton">Atras</a>
+        <a href="/front/html/Menu.html" class="button1" id="addButton">Atrás</a>
     </div>
 </main>
 <footer>
-    <p>&copy; 2014 Cafe Bar, Todos los derechos reservados.</p>
+    <p>&copy; 2014 Café Bar, Todos los derechos reservados.</p>
 </footer>
 
 <script src="/front/js/usuariosMenu.js"></script>
