--- a/front/html/Usuarios_Crear.html
+++ b/front/html/Usuarios_Crear.html
@@ -63,11 +63,11 @@
         <button type="submit">Crear</button>
     </form>
     <div class="contenedor2">
-        <a href="/front/html/Usuarios.html" class="button1" id="addButton">Atras</a>
+        <a href="/front/html/Usuarios.html" class="button1" id="addButton">Atrás</a>
     </div>
 </main>
 <footer>
-    <p>&copy; 2014 Cafe Bar, Todos los derechos reservados.</p>
+    <p>&copy; 2014 Café Bar, Todos los derechos reservados.</p>
 </footer>
 
 <script src="/front/js/usuarios.js"></script>
