--- a/front/html/Proveedores.HTML
+++ b/front/html/Proveedores.HTML
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         <div class="contenedor5">
-            <a href="/front/html/Inicio.html" class="button5" id="addButton">
+            <a href="/front/html/Inicio.html" class="button5" id="cerrarSesion">
                 <span>Cerrar</span><br>
                 <span>Sesión</span>
             </a>
