--- a/front/html/Proveedores_Actualizar.html
+++ b/front/html/Proveedores_Actualizar.html
@@ -10,8 +10,6 @@
 <header>
     <div>
         <div class="menu container">
-            <label for="menu">
-            </label>
             <nav>
                 <ul>
                     <li><a href="/front/html/Menu.html">INICIO</a></li>
@@ -21,7 +19,7 @@
                 </ul>
             </nav>
             <div class="contenedor5">
-                <a href="/front/html/Inicio.html" class="button5" id="addButton">
+                <a href="/front/html/Inicio.html" class="button5" id="cerrarSesion">
                     <span>Cerrar</span><br>
                     <span>Sesión</span>
                 </a>
@@ -32,7 +30,7 @@
 <main class="container1">
     <h3 class="center-align1">Gestión de Proveedores</h3>
     <div class="form-container">
-        <form id="crearProveedorForm" onsubmit="CreacionProveedor(event)">
+        <form id="actualizarProveedorForm" onsubmit="actProveedor(event)">
             <div style="display: flex; flex-wrap: wrap;">
                 <div style="flex: 1; min-width: 200px;">
                     <div class="form-group">
