--- a/front/html/Proveedores.HTML
+++ b/front/html/Proveedores.HTML
@@ -41,13 +41,13 @@
         <table>
             <thead>
                 <tr>
-                    <th>Id</th>
+                    <th>ID</th>
                     <th>NIT</th>
-                    <th>Nombre</th>
-                    <th>Contacto</th>
-                    <th>Email</th>
-                    <th>Dirección</th>
-                    <th>Acciones</th>
+                    <th>NOMBRE</th>
+                    <th>CONTACTO</th>
+                    <th>EMAIL</th>
+                    <th>DIRECCION</th>
+                    <th>ACCIONES</th>
                 </tr>
             </thead>
             <tbody id="providerList">
